--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   badges: ^1.1.0
   flutter_money_formatter: ^0.8.2
   shared_preferences: 0.5.0
+  flare_flutter: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -48,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/teddy_test.flr
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
