--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider: 3.1.0
-  dio: ^2.1.16
+  dio: 2.1.16
   rxdart: ^0.22.2
   flutter_spinkit: ^4.0.0
-  badges: ^1.1.0
+  badges: 1.1.0
   flutter_money_formatter: ^0.8.2
   shared_preferences: 0.5.0
   flare_flutter: ^2.0.5
-
+  bottom_navy_bar: ^5.5.0
+  random_color: ^1.0.5
+  fluttertoast: 7.1.0
+  introduction_screen: ^1.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -51,6 +54,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/teddy_test.flr
+    - assets/img/wine_logo.png
+    - assets/img/chart.png
+    - assets/img/user.png
+    - assets/img/wine_lap.png
+    - assets/img/success.gif
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
