--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: 3.1.0
 #  dio: 2.1.16
-  dio: 3.0.10
+  dio: ^3.0.3
   rxdart: ^0.22.2
   flutter_spinkit: ^4.0.0
   badges: 1.1.0
