--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   flutter_spinkit: ^4.0.0
   badges: 1.1.0
   flutter_money_formatter: ^0.8.2
-  shared_preferences: 0.5.0
+  # shared_preferences: 0.5.0
+  shared_preferences: ^0.5.12+2
   flare_flutter: ^2.0.5
   bottom_navy_bar: ^5.5.0
   random_color: ^1.0.5
